Fixed bug in aspect ratio and upgraded stack implementation to support align-self: stretch

--- a/src/sass/extensions/flex-stack.scss
+++ b/src/sass/extensions/flex-stack.scss
@@ -30,11 +30,17 @@
 
 		.hstack {
 			@include mixins.variants($composed...) {
-				display: flex;
-				flex-direction: row;
-				justify-content: center;
-				align-items: center;
-				min-width: min-content; // Needed for `overflow-x-scroll`
+				@if utils.matches($composed, core) {
+					display: flex;
+					flex-direction: row;
+					justify-content: center;
+					align-self: stretch;
+					align-items: center;
+					min-width: min-content; // Needed for `overflow-x-scroll`
+				} @else {
+					flex-direction: row;
+					min-width: min-content; // Needed for `overflow-x-scroll`
+				}
 			}
 		}
 
@@ -60,11 +66,17 @@
 
 		.vstack {
 			@include mixins.variants($composed...) {
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
-				min-width: auto; // Needed for `overflow-x-scroll`
+				@if utils.matches($composed, core) {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-self: stretch;
+					align-items: center;
+					min-width: auto; // Needed for `overflow-x-scroll`
+				} @else {
+					flex-direction: column;
+					min-width: auto; // Needed for `overflow-x-scroll`
+				}
 			}
 		}
 
